# zerg

./: .dockerignore  .env.example  .env.test.example  .gitignore  .pre-commit-config-frontend.yaml  .pre-commit-config.yaml  .stylelintrc.json  .traccar_config.json.example  ANIMATION_TESTING_SUMMARY.md  BACKEND_REFACTOR.md  BACKEND_SUBSCRIPTION_ACK_IMPLEMENTATION.md  CANVAS_MOBILE_UX_PROGRESS.md  CANVAS_RENDER_ROADMAP.md  CANVAS_ROADMAP.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODEBASE_REFACTOR_SUGGESTIONS.md  CODE_REVIEW_WEBSOCKET_IMPLEMENTATION.md  COMPLETE.md  COMPREHENSIVE_MOBILE_UX_REVIEW.md  CONTENT_VERIFICATION_NEEDED.md  DEPLOY.md  DEPLOYMENT_READINESS.md  FRONTEND_IMPROVEMENTS.md  HANDOFF.md  HONEST_STATUS.md  JARVIS_INTEGRATION_PROGRESS.md  LANDING_PAGE_TASKS.md  LANGGRAPH_MIGRATION.md  MOBILE_DRAG_DROP_BUG_REPORT.md  MOBILE_RESPONSIVE_IMPLEMENTATION_SUMMARY.md  MOBILE_RESPONSIVE_REFACTOR.md  Makefile  PHASE_2_READY.md  PRODUCTION-STATUS.md  PROJECT_OVERVIEW.md  QA_FIXES_RESOLUTION.md  README.md  README.swarm.md  READY_TO_TEST.md  (+87 more)
apps/zerg/backend/: .dockerignore  .envrc  .flake8  DATABASE.md  README.md  TESTING_STRATEGY.md  cleanup_test_dbs.sh  debug_agent_node.py  debug_agent_simple.py  debug_full_workflow.py  debug_langgraph_execution.py  debug_single_node.py  debug_token_stream.py  pyproject.toml  pytest.ini  ruff.toml  run_backend_tests.sh  start.sh  test_langgraph_integration.py  test_workflow_api.py  validate-runtime.py
backend/: .env.example  .flake8  .gitignore  DATABASE.md  Dockerfile  README.md  TESTING_STRATEGY.md  alembic.ini  backend_readme.md  cleanup_test_dbs.py  cleanup_test_dbs.sh  debug_agent_node.py  debug_agent_simple.py  debug_full_workflow.py  debug_langgraph_execution.py  debug_simple.py  debug_single_node.py  debug_workflow_test.py  main.py  pyproject.toml  pytest.ini  ruff.toml  run_backend_tests.sh  run_tests.sh  seed_minimal_template.py  start.sh  test_langgraph_integration.py  test_main.py  test_tools_integration.py  uv.toml
backend/alembic/: env.py
backend/alembic/versions/: 70b7ee2edc1c_add_missing_updated_at_column_to_.py  7d5ca9515594_initial_migration_complete_database_.py
backend/app/: crud.py  database.py  init_db.py  models.py  schemas.py
backend/app/routers/: agents.py
backend/apscheduler/: __init__.py
backend/docs/: email_testing_guide.md  expression_evaluator_design.md  output_envelope_design.md
backend/scripts/: test_gmail_integration.py
backend/src/: __init__.py
backend/tests/: conftest.py  jsonschema_strategies.py  test_admin_permissions.py  test_agent_details.py  test_agent_events.py  test_agent_manager.py  test_agent_messages.py  test_agent_tool_workflow.py  test_agents.py  test_api_contract_canvas.py  test_basic_agent_workflow_e2e.py  test_canonical_serialization.py  test_canonical_types.py  test_canonical_validators.py  test_canonical_workflow_engine.py  test_canvas_layout.py  test_canvas_transformer.py  test_canvas_workflow_e2e.py  test_chat_message_flow.py  test_conditional_workflows.py  test_conditional_workflows_integration.py  test_connection_workflow.py  test_connectors_api.py  test_cors_tightening.py  test_crud.py  test_db_isolation.py  test_email_trigger_service.py  test_envelope_format_integration.py  test_event_bus.py  test_event_publishing_cleanup.py  test_expression_evaluator.py  test_future_return.py  test_gmail_watch_initialisation.py  test_gmail_watch_renewal.py  test_gmail_webhook_history_progress.py  test_gmail_webhook_trigger.py  test_integration_rest_ws_chat.py  test_mcp_servers.py  test_message_insertion_order.py  test_model_allowlist.py  (+49 more)
backend/zerg/: agents.py  config.py  constants.py  database.py  legacy_agent_manager.py  main.py  metrics.py  pricing.py  test_db_manager.py
backend/zerg/agents_def/: zerg_react_agent.py
backend/zerg/app/: __init__.py  agents.py  database.py  init_db.py  models_config.py  websocket.py
backend/zerg/auth/: strategy.py
backend/zerg/callbacks/: token_stream.py
backend/zerg/config/: __init__.py
backend/zerg/core/: __init__.py  base_config.py  config.py  interfaces.py  services.py  test_configs.py  test_implementations.py
backend/zerg/crud/: crud.py
backend/zerg/dependencies/: __init__.py  auth.py
backend/zerg/email/: providers.py
backend/zerg/events/: decorators.py  event_bus.py  publisher.py
backend/zerg/managers/: agent_runner.py
backend/zerg/middleware/: rate_limiter.py  worker_db.py
backend/zerg/models/: enums.py  models.py
backend/zerg/routers/: admin.py  agents.py  auth.py  connectors.py  email_webhooks.py  email_webhooks_pubsub.py  graph_layout.py  mcp_servers.py  models.py  ops.py  runs.py  system.py  templates.py  threads.py  triggers.py  users.py  websocket.py  workflow_executions.py  workflows.py
backend/zerg/schemas/: canonical_serialization.py  canonical_types.py  canonical_validators.py  node_output.py  schemas.py  workflow.py  workflow_schema.py  ws_messages.py
backend/zerg/services/: quota.py  (+24 more)
frontend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build-debug.sh  build-only.sh  build.rs  build.sh  fix_canvas_renderer.sh  fix_schema_migration.sh  fix_specific_errors.sh  frontend_readme.md  frontend_redesign.md  nginx.conf  playwright.config.ts  run_frontend_tests.sh  surgical_fix.sh
frontend/.tmp_build/: xcrun_db
frontend/e2e/: modal_tab_visibility.spec.ts
frontend/src/: REFACTORING.md  command_executors.rs  constants.rs  dom_utils.rs  favicon.rs  lib.rs  macros.rs  messages.rs  migration_tool.rs  models.rs  models_config.rs  network.rs  node_agent_legacy_ext.rs  node_builder.rs  scheduling.rs  schema_validation.rs  state.rs  storage.rs  thread_handlers.rs  toast.rs  trigger_invariants_tests.rs  ui.rs  ui_components.rs  ui_old.rs  update.rs  utils.rs  views.rs  ws_prop_test.rs
frontend/tests/: pact_contract_coverage.rs
frontend/www/: .gitignore  README.md  chat.css  feather-init.js  index.html  index.html.template  layout.css  ripple-init.js  run_button.css  server.py  shelf-toggle.js  styles.css  tokens.css
wasm-box-demo/: Cargo.toml  README.md  build.sh
wasm-box-demo/src/: lib.rs
(+1326 files in other folders)
