[package]
name = "agent-platform-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "MouseEvent",
    "CssStyleDeclaration",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebSocket",
    "MessageEvent",
    "console",
    "Request",
    "RequestInit",
    "Headers",
    "RequestMode",
    "TextMetrics",
    "Event",
    "Response",
    "ResponseInit",
    "DomStringMap",
    "HtmlBodyElement",
    "WheelEvent",
    "DomRect",
    "CloseEvent",
    "Storage"
]

[package.metadata.wasm-pack.profile.dev]
wasm-bindgen = { debug-js-glue = true, demangle-name-section = true } 