[package]
name = "agent-platform-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4", features = ["wasmbind"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.4", features = ["v4", "js"] }
lazy_static = "1.4.0"
unicode-segmentation = "1.10"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "MouseEvent",
    "DragEvent",
    "DataTransfer",
    "DomTokenList",
    "CssStyleDeclaration",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebSocket",
    "MessageEvent",
    "console",
    "Request",
    "RequestInit",
    "Headers",
    "RequestMode",
    "TextMetrics",
    "Event",
    "ErrorEvent",
    "Response",
    "ResponseInit",
    "DomStringMap",
    "HtmlBodyElement",
    "WheelEvent",
    "DomRect",
    "CloseEvent",
    "Storage",
    "EventTarget",
    "AddEventListenerOptions",
    "Location"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[package.metadata.wasm-pack.profile.dev]
wasm-bindgen = { debug-js-glue = true, demangle-name-section = true } 