[package]
name = "exchange-collection-ws-zerg"
version = "0.2.0"
description = "Refactored to **AsyncAPI 3.0** semantics.  Channels now only declare the\naddress + parameters; all publish/subscribe semantics live in the\n*operations* section.\n"
edition = "2018"

# use workspace when needed
[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
typed-websocket = "0.1.0"
